--- a/repositoryUserInterface/app/views/Application/homeuser.html
+++ b/repositoryUserInterface/app/views/Application/homeuser.html
@@ -22,13 +22,13 @@
 				var temp="http://"+document.location.hostname+":"+document.location.port+"/";
 				
 
-				createHeader();
+				createHeaderUser();
 				createFooter();
 				$("#logout").click(function() {
 
 					window.location = URL_LOGOUT_USER;
 				});
-
+				/*
 				var getsecretkey = {};
 
 				$.get(temp + URL_GET_SECRET_KEY, function(rData) {
@@ -40,7 +40,7 @@
 				$("#viewkey").click(function() {
 			    		alert("Your API Key is " + getsecretkey['secretkey']);
 			    });
-				
+				*/
 			});
 			</script>
 			
@@ -51,16 +51,15 @@
 		<div id="header-container">
 			<header class="wrapper clearfix">
 				<h1 id="title">SensorAct
-				<br />
-				<br />
-				<span style="font-size:25px;">Sense - Interact - Actuate</span></h1>
+					<br /><br />
+					<span style="font-size:25px;">Sense - Interact - Actuate</span>
+				</h1>
 				<nav id="navHeader">
 				</nav>
-				<br />
-				<br />
+				<br /><br />
 				<nav>
 					<p class="pbox" style="margin-bottom:-20px;"> Welcome ${username} &nbsp | &nbsp
-						<span id="viewkey">View API key</span> &nbsp; | 
+						<!--<span id="viewkey">View API key</span> &nbsp; | -->
 						&nbsp<span id="logout">Logout</span>
 					</p>
 				</nav>
@@ -70,7 +69,6 @@
 			<p class="space"></p>
 			<img src="@{'/public/images/background_2.jpg'}" style="text-align:center" width="75%" height="350px"/>
 			<div id="status"></div>
-			<div id="wami"></div>
 			<hr/>
 
 			<p class="space"></p>
@@ -93,6 +91,7 @@
 			</p>
 			<hr>
 		</div>
+		<input id="usertype"  type="hidden" value=${usertype}>
 		<div style="clear:both;" id="footer-container">
 			
 		</div>
