--- a/repositoryUserInterface/app/views/Application/assocguardrule.html
+++ b/repositoryUserInterface/app/views/Application/assocguardrule.html
@@ -25,6 +25,7 @@ lang="en">
 			$(document).ready(function() {
 
 				createHeader();
+				createFooter();
 
 				/**
 				 * Global Variables used during the lifecycle of the page
@@ -52,25 +53,6 @@ lang="en">
 				
 				var classReference = "";
 				
-				 /**
-				 * Adding the link attribute to Logout,Home element
-				 */
-					
-				$("#logout").click(function() {
-					window.location = temp + URL_LOGOUT_USER;
-				});
-
-				var getsecretkey = {};
-
-				$.get(temp + URL_GET_SECRET_KEY, function(rData) {
-
-			    		getsecretkey = rData;
-			    		
-			    });
-
-				$("#viewkey").click(function() {
-			    		alert("Your API Key is " + getsecretkey['secretkey']);
-			    });
 					/*
 					 * Setting the AJAX to work in sycnhronous fashion
 					 */
@@ -666,6 +648,9 @@ lang="en">
 			</header>
 		</div>
 		<div class="wrapper" style="width: 90%;">
+			<p class="space"></p>
+			<div id="selectedVPDS" style="float:right; font-size: 12px"><span><b>Selected VPDS:</b></span><span id="labelVpdsname"></span ></div>
+			<br/>
 			<div id="modeDiv">
 				<h1 id="guardrule" class="newfont" style="text-align: center">Create Associations</h1>
 			</div>
@@ -695,10 +680,14 @@ lang="en">
 			<input	id="mode"  type="hidden" value=${mode}>
 		</div>
 		<hr>
+		<div id="iFields">
+			<input id="username"  type="hidden" value=${username}> 
+			<input id="usertype"  type="hidden" value=${usertype}> 
+			<input id="vpdsname"  type="hidden" value=${vpdsname}> 
+			<input id="vpdsurl"  type="hidden" value=${vpdsurl}>
+			<input id="vpdskey"  type="hidden" value=${vpdskey}>
+		</div>
 		<div style="clear: both;" id="footer-container">
-			<footer class="wrapper">
-				<h4 align="center">©2012 |MUC,IIIT-Delhi</h4>
-			</footer>
 		</div>
 	</body>
 </html>
