--- a/repositoryUserInterface/app/views/Application/guardrule.html
+++ b/repositoryUserInterface/app/views/Application/guardrule.html
@@ -19,7 +19,8 @@
 		<script type="text/javascript">
 			$(document).ready(function() {
 
-				createHeader();				
+				createHeader();			
+				createFooter();	
 
 				/**
 				 * Global Variables used during the lifecycle of the page
@@ -42,22 +43,7 @@
 				});
 
 			/********************* --------------- Changes made here --------------- ***************/
-				$("#logout").click(function() {
 
-					window.location = URL_LOGOUT_USER;
-				});
-
-				var getsecretkey = {};
-
-				$.get(temp + URL_GET_SECRET_KEY, function(rData) {
-
-			    		getsecretkey = rData;
-			    		
-			    });
-
-				$("#viewkey").click(function() {
-			    		alert("Your API Key is " + getsecretkey['secretkey']);
-			    });
 				/*
 				 * Hiding Error Divs
 				 */
@@ -361,6 +347,9 @@
 			</header>
 		</div>
 		<div class="wrapper" style="">
+			<p class="space"></p>
+			<div id="selectedVPDS" style="float:right; font-size: 12px"><b>Selected VPDS:</b><label id="labelVpdsname"></label></div>
+			<br/>
 			<div id="getDeviceErrorDiv" class ="errorDiv"></div>
 			<h1 class="newfont" id="guardrule" style="text-align:center;">Guard Rules Created</h1>
 			<hr>
@@ -373,10 +362,14 @@
 			<input type="hidden"  id ="username" value =${username}></input>
 		</div>
 		<br/>
+		<div id="iFields">
+			<input id="username"  type="hidden" value=${username}> 
+			<input id="usertype"  type="hidden" value=${usertype}> 
+			<input id="vpdsname"  type="hidden" value=${vpdsname}> 
+			<input id="vpdsurl"  type="hidden" value=${vpdsurl}>
+			<input id="vpdskey"  type="hidden" value=${vpdskey}>
+		</div>
 		<div style="clear:both;" id="footer-container">
-			<footer class="wrapper">
-				<h4 align="center">&copy2012 |MUC,IIIT-Delhi</h4>
-			</footer>
 		</div>
 	</body>
 </html>
