--- a/repositoryUserInterface/app/views/Application/sharedevices.html
+++ b/repositoryUserInterface/app/views/Application/sharedevices.html
@@ -7,7 +7,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-		<title> Welcome</title>
+		<title> Shared Devices</title>
 		<link rel="stylesheet" type="text/css" href="@{'/public/stylesheets/style.css'}">
 		<script src="@{'/public/js/libs/modernizr-2.0.6.min.js'}"></script>
 		<script src="@{'/public/javascripts/jquery-1.6.4.min.js'}" type="text/javascript" charset="${_response_encoding}"></script>
@@ -20,15 +20,21 @@
 
 							
 				var temp="http://"+document.location.hostname+":"+document.location.port+"/";
-				
+				var usertype = $("#usertype").val();
 
-				createHeader();
+				if (usertype == "USER")
+					createHeaderUser();
+				else if (usertype == "OWNER")
+					createHeaderVO();
+
 				createFooter();
+				
 				$("#logout").click(function() {
 
 					window.location = URL_LOGOUT_USER;
 				});
 
+				/*
 				var getsecretkey = {};
 
 				$.get(temp + URL_GET_SECRET_KEY, function(rData) {
@@ -40,6 +46,7 @@
 				$("#viewkey").click(function() {
 			    		alert("Your API Key is " + getsecretkey['secretkey']);
 			    });
+				*/
 				
 			});
 			</script>
@@ -60,39 +67,19 @@
 				<br />
 				<nav>
 					<p class="pbox" style="margin-bottom:-20px;"> Welcome ${username} &nbsp | &nbsp
-						<span id="viewkey">View API key</span> &nbsp; | 
+						<!--<span id="viewkey">View API key</span> &nbsp; | -->
 						&nbsp<span id="logout">Logout</span>
 					</p>
 				</nav>
 			</header>
 		</div>
-		<div class="wrapper" style="text-align:center;">
-			<p class="space"></p>
-			<img src="@{'/public/images/background_2.jpg'}" style="text-align:center" width="75%" height="350px"/>
-			<div id="status"></div>
-			<div id="wami"></div>
-			<hr/>
+		<div class="wrapper" style="">
+			<h1 class="newfont" id="device" style="text-align:center;">Devices shared with me</h1>
+			<hr>	
 
-			<p class="space"></p>
-			<!--div id="input_div"><label for="input_message">Input</label>
-						<p name="input_message" id="input_message"></p></div>
-			<hr/>
-			<div id="output_div"><label for="output_message">Output</label>
-						<p name="output_message" id="output_message" ></p></div>
-			<hr>
-			
-			<div id="audio">
-			 	
-  				
-			 </div-->
-			
-			<p class='newfont' style="font-size:20px;">
-				Smart Rooms at IIIT-Delhi
-				<br />
-				By MUC Group
-			</p>
 			<hr>
 		</div>
+		<input id="usertype"  type="hidden" value=${usertype}>
 		<div style="clear:both;" id="footer-container">
 			
 		</div>
